Fixed horizontal scroll issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,8 @@ body {
   line-height: 1.5;
   color: var(--n900);
 
+  overflow-x: hidden; /* Stops weird horizontal scrolling bug */
+
   @include respond-up('desktop') {
     font-size: 1.125rem; /* 18px @ default 16px font size */
   }
